fix menu items appearing initially on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,11 +125,15 @@ html {
     padding-top: 0.5rem;
     overflow: hidden;
     transition: max-height 0.4s ease-in-out;
+    opacity: 0;
+    pointer-events: none;
   }
 
   .nav-center.nav-expanded {
     /* display: flex; */
     max-height: 500px;
+    opacity: 1;
+    pointer-events: auto;
   }
 
   .nav-toggle {
